# AI-Imposter

./: .firebaserc  .gitignore  README.md  firestore.rules  package-lock.json
.claude/agents/: code-reviewer.md  project-programmer.md  software-architect.md
.firebase/: hosting.ZnJvbnRlbmQvZGlzdA.cache
backend/: 2025-10-10-you-will-help-me-with-development-project-first.txt  COMPLETE_ENUM_ANALYSIS.md  Dockerfile  SCHEMA_RECOMMENDATIONS.md  bigquery_schema.json  mock_game_results.json  pyproject.toml  test_ai_integration.py  test_chain.py  test_factory.py  test_firebase.py  test_game_archival.py  test_gpt5_params.py  test_history_extraction.py  test_model_availability.py  test_prompts.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/endpoints/: games.py  models.py
backend/app/core/: config.py
backend/app/models/: game.py
backend/app/services/: ai_service.py  firebase_service.py  game_service.py  model_catalog.py
backend/app/utils/: helpers.py
backend/cloud_functions/archive_game/: README.md  main.py  requirements.txt
backend/tests/: test_ai_service_integration.py  test_game_service.py  test_model_catalog.py  test_models_endpoint.py
docs/: ai_service_design.md  ai_service_implementation_plan.md  analytics_pipeline_implementation.md  backend_api.md  backend_blueprint.md  cloud_infrastructure.md  database_schema.md  dev_notes.md  development_process.md  frontend_blueprint.md  gameplay_rules.md  gameroom_implementation_plan.md  implementation_plan.md  pipelines_architecture.md  project_blueprint.md  project_structure.md  troubleshooting.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/components/: ChatDisplay.vue  CreateGameModal.vue  GameStatusDisplay.vue  HostControls.vue  MessageInput.vue  PlayerList.vue  RoundTimer.vue  VotingInterface.vue
(+9 files in other folders)
